tests/fixtures/fail/borrow_type_pointee_mismatch.sc
let main(): i32 = {
  let value = 42
  let alias: borrow(i64) = borrow(value)
  0
}
